--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.23.1",
@@ -19,8 +20,15 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@types/jest": "^29.5.14",
     "@types/react": "~18.3.12",
+    "jest": "^29.7.0",
+    "jest-expo": "^52.0.6",
+    "ts-jest": "^29.3.1",
     "typescript": "^5.3.3"
+  },
+  "jest": {
+    "preset": "jest-expo"
   },
   "private": true
 }
